--- a/src/assets/stylesheets/application.scss
+++ b/src/assets/stylesheets/application.scss
@@ -19,6 +19,55 @@ body {
   grid-template-rows: auto 1fr auto;
 }
 
-main {
-  padding: 2em 0;
+.wrapper {
+  min-height: 100vh;
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+}
+
+.column {
+  height: 100%;
+  display: flex;
+}
+
+.header {
+  display: flex;
+  flex-shrink: 0;
+  flex-direction: row;
+}
+
+.header-left {
+  flex-grow: 2;
+}
+
+.header-right {
+  flex-grow: 20;
+}
+
+.main-screen {
+  @media (min-width: 320px) and (max-width: 480px) {
+    flex-direction: column-reverse;
+  }
+
+  flex-grow: 1;
+  display: flex;
+  flex-direction: row;
+}
+
+.section-left {
+  @media (min-width: 320px) and (max-width: 480px) {
+    max-width: 100%;
+  }
+
+  flex-grow: 1;
+  max-width: 300px;
+}
+
+.main {
+  @media (min-width: 320px) and (max-width: 480px) {
+    height: 60vh;
+  }
+
+  flex-grow: 3;
 }
